# Library_Management_System

./: .gitignore
LibraryManagement/: Book.cpp  Book.h  Library.cpp  Library.h  Utils.cpp  Utils.h  books.txt  main.cpp  transactions.txt
LibraryManagementSystem/: .gitignore  README.md
LibraryManagementSystem/backend/: .env.example  CMakeLists.txt  server.cpp
LibraryManagementSystem/backend/api/: auth.cpp  auth.h  books.cpp  books.h  common.h  issue.cpp  issue.h  payment.cpp  payment.h  reservations.cpp  reservations.h  return.cpp  return.h  routes.cpp  routes.h  stats.cpp  stats.h  student_fines.cpp  student_fines.h  transactions.cpp  transactions.h  waitlists.h
LibraryManagementSystem/backend/database/: db.cpp  db.h  schema.sql
LibraryManagementSystem/backend/database/migrations/: add_payment_columns.sql  add_payment_pending_status.sql
LibraryManagementSystem/backend/existing_cpp_code/: Book.cpp  Book.h  Library.cpp  Library.h  Utils.cpp  Utils.h
LibraryManagementSystem/backend/models/: BookModel.h  TransactionModel.h  UserModel.h
LibraryManagementSystem/backend/utils/: email_sender.h  env_loader.cpp  env_loader.h  jwt.cpp  jwt.h
LibraryManagementSystem/frontend/: index.html  package-lock.json  package.json  vite.config.js
LibraryManagementSystem/frontend/src/: App.jsx  main.jsx
LibraryManagementSystem/frontend/src/components/: AdminLayout.jsx  AdminReservationPanel.css  AdminReservationPanel.jsx  AdminRoute.jsx  AppShell.jsx  BookRequestsPanel.jsx  EmptyState.jsx  LoadingSpinner.jsx  LowStockAlert.css  LowStockAlert.jsx  Modal.jsx  Navbar.jsx  (+10 more)
(+45 files in other folders)
